# PyMesh

./: .gitmodules  Settings.cmake  build.sh
cmake/: FindAllDependencies.cmake  FindCutter3d.cmake  GenerateDependencyTargets.cmake
python/: CMakeLists.txt  PyCutter3d.cpp  PyVoxelGrid.cpp  module.cpp
python/pymesh/: VoxelGrid.py  __init__.py  cut_tet_mesh.py  cutter3d.py
python/pymesh/meshutils/: __init__.py  point_locate.py
tools/: CMakeLists.txt
tools/3dCutter/: CMakeLists.txt  Cutter3d.h
tools/Cutter3d/: CMakeLists.txt  Cutter3d.cpp  Cutter3d.h
tools/Envelope/: VoxelGrid.h  VoxelGrid.inl
